--- a/app/views/public/pages/_produit.html.erb
+++ b/app/views/public/pages/_produit.html.erb
@@ -1,53 +1,48 @@
-<div class="col">
-    <%#= card_produit(produit) %>
+<div class="col" style="width: 18rem;">
     
     <div data-controller="placeholder-card">
 
         <!-- Card with Placeholder -->
-        <div class="card card-placeholder" style="width: 18rem;">
+        <div class="card card-placeholder" aria-hidden="true">
 
-            <div class="placeholder">
-                <span class="placeholder-glow col-12"></span>
+            <div class="placeholder col-12" style="height: 300px; background-color: #e0e0e0;">
             </div>
-        
+                    
             <div class="card-body">
                 <h5 class="card-title placeholder-glow" data-placeholder-card-target="placeholder">
-                <span class="placeholder col-6"></span>
+                    <span class="placeholder col-6"></span>
                 </h5>
+                <p class="card-text placeholder-glow">
+                    <span class="placeholder col-7"></span>
+                    <span class="placeholder col-4"></span>
+                    <span class="placeholder col-4"></span>
+                    <span class="placeholder col-6"></span>
+                    <span class="placeholder col-8"></span>
+                </p>
             </div>
         </div>
 
         <!-- Real Content -->
-        <div class="card card-content" data-placeholder-card-target="content" style="display:none; width: 18rem;">
+        <%= link_to produit_path(slug: produit.nom.parameterize, id: produit.id), class: "text-decoration-none", data: { turbo: false } do %>
+            <div class="card card-content" data-placeholder-card-target="content" style="display:none;">
 
-            <%# link_to produit_path(slug: produit.nom.parameterize, id: produit.id), 
-                class: "text-decoration-none" do %>
-
-                <%= image_tag(produit.default_image, class: "card-img-top", style: "max-height: 400px; object-fit: cover;") %>
+                <%= image_tag(produit.default_image, class: "card-img-top", style: "max-height: 300px; object-fit: cover;") %>
 
                 <div class="card-body">
-                    <h5 class="card-title">
+                <h5 class="card-title">
                     <%= produit.nom %>
-                    </h5>
+                </h5>
+                <p class="card-text text-truncate-multiline">
+                    <span>
+                    <%= produit.description %>
+                    </span>
+                </p>
                 </div>
-            
-            <%# end %>
 
-        </div>
+            </div>
+        <% end %>
+
 
     </div>
 
 </div>
-
-
-  <%# def card_produit(produit) %>
-    <%# link_to produit_path(slug: produit.nom.parameterize, id: produit.id), 
-      class: "text-decoration-none", data: { turbo: false } do
-      content_tag :div, class: "card text-bg-light " do
-        image_tag(produit.default_image, class: "card-img", style: "max-height: 400px; object-fit: cover;") +
-        content_tag(:div, class: "card-img-overlay") do
-          content_tag(:h5, produit.nom, class: "card-title badge bg-brand-colored fs-6")
-        end
-      end
-    end
-  end %>
