--- a/app/views/public/pages/produits.turbo_stream.erb
+++ b/app/views/public/pages/produits.turbo_stream.erb
@@ -2,7 +2,7 @@
 
 <%= turbo_stream.append :produits do %>
     <%= render partial: "public/pages/produit", 
-            collection: @produits_uniques %>
+            collection: @produits %>
 <% end %>
 
 <% if @pagy.next.present? %>
