--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -106,6 +106,7 @@
           <%= custom_badge("", "fournisseur:", "", "", produit.fournisseur&.nom ) if produit.fournisseur&.nom %>
           <%= custom_badge("", "quantité:", "", "", produit.quantite ) if produit.quantite %>
           <%= custom_badge("", "date achat:", "", "", produit.dateachat ) if produit.dateachat %>
+          <%= custom_badge("", "poids (grammes):", "", "", produit.poids ) %>
 
           <% if current_admin_user.admin? %>
             <%= custom_badge("", "prixachat", "", "", produit.prixachat ) if produit.prixachat %>
