--- a/app/views/public/pages/_produit.html.erb
+++ b/app/views/public/pages/_produit.html.erb
@@ -19,6 +19,10 @@
                     <span class="placeholder col-6"></span>
                     <span class="placeholder col-8"></span>
                 </p>
+                <p class="card-text placeholder-glow d-flex justify-content-between">
+                    <span class="placeholder col-4"></span>
+                    <span class="placeholder col-4"></span>
+                </p>
             </div>
         </div>
 
@@ -29,14 +33,19 @@
                 <%= image_tag(produit.default_image, class: "card-img-top", style: "max-height: 300px; object-fit: cover;") %>
 
                 <div class="card-body">
-                <h5 class="card-title">
-                    <%= produit.nom %>
-                </h5>
-                <p class="card-text text-truncate-multiline">
-                    <span>
-                    <%= produit.description %>
-                    </span>
-                </p>
+                    <h5 class="card-title">
+                        <%= produit.nom %>
+                    </h5>
+                    <p class="card-text text-truncate-multiline">
+                        <span>
+                            <%= produit.description %>
+                        </span>
+                    </p>
+
+                    <p class="card-text d-flex justify-content-between">
+                        <%= badge_taille(produit) %>
+                        <%= statut_disponibilite_shop(statut_disponibilite(produit, Time.now, Time.now)[:statut]) %>
+                    </p>                
                 </div>
 
             </div>
