--- a/app/views/public/pages/_taille_selected.html.erb
+++ b/app/views/public/pages/_taille_selected.html.erb
@@ -5,7 +5,7 @@
   <div class="container-fluid mt-3">
 
     <div class="text-uppercase fw-bold mb-1">
-        Couleurs
+        Tailles
     </div>
     
     <div>
