--- a/app/views/public/pages/_produit.html.erb
+++ b/app/views/public/pages/_produit.html.erb
@@ -43,7 +43,11 @@
                     </p>
 
                     <p class="card-text d-flex justify-content-between">
-                        <%= badge_taille(produit) %>
+                        <% if params[:taille].present? %>
+                            <%= badge_taille(produit) %>
+                        <% else %>
+                           <span></span>
+                        <% end %>
                         <%= statut_disponibilite_shop(statut_disponibilite(produit, Time.now, Time.now)[:statut]) %>
                     </p>                
                 </div>
