--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -19,6 +19,7 @@
             <div class="fw-bold">Pages</div>
             <%= link_to "La boutique de Cannes", laboutique_url(subdomain: "shop"), class: "d-block text-secondary text-decoration-none" %>
             <%= link_to "Catégories", categories_url(subdomain: "shop"), class: "d-block text-secondary text-decoration-none" %>
+            <%= link_to "Produits", produits_index_url(subdomain: "shop"), class: "d-block text-secondary text-decoration-none" %>
             <%= link_to "Prendre Rendez-vous", rdv_url(subdomain: "shop"), class: "d-block text-secondary text-decoration-none" %>
         </div>        
 
