--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -8,6 +8,7 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav me-auto my-2 my-lg-0">
         <%= nav_link_public(home_path, "Accueil") %>
+        <%= nav_link_public(produits_index_url, "Produits") %>
         <%= nav_link_public(categories_url, "Catégories") %>
         <%= nav_link_public(laboutique_url, "La boutique de Cannes") %>
         <%= nav_link_public(contact_url, "Contact") %>
