--- a/app/views/public/pages/produits.turbo_stream.erb
+++ b/app/views/public/pages/produits.turbo_stream.erb
@@ -8,13 +8,9 @@
 <% if @pagy.next.present? %>
     <%= turbo_stream.replace :pagination do %>
         <%= turbo_frame_tag :pagination, loading: :lazy,
-                            src: produits_path(format: :turbo_stream,
-                            id: params[:id],
-                            slug: params[:slug], 
-                            taille: params[:taille],
-                            page: @pagy.next, 
-                            q: params[:q]&.to_unsafe_h 
-        ) %>
+            src: params[:id].present? ? 
+                produits_path(format: :turbo_stream, id: params[:id], slug: params[:slug], taille: params[:taille], page: @pagy.next, q: params[:q]&.to_unsafe_h) : 
+                produits_index_path(format: :turbo_stream, taille: params[:taille], page: @pagy.next, q: params[:q]&.to_unsafe_h) %>
     <% end %>
 
 <% end %>
