--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="position-relative d-inline-block text-center w-100">
-  <%= image_tag('/images/img1.png', class: "w-100", style: "object-fit: cover; height: 400px;") %>
+  <%= render  "main_carousel" %>
+  <%#= image_tag('/images/img1.png', class: "w-100", style: "object-fit: cover; height: 400px;") %>
 
   <div class="container-fluid d-flex flex-column justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
     <h1 class="public-text-overlay brand-colored fs-1 mb-2 text-uppercase">
