--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -28,36 +28,37 @@
 
     <hr>
 
-    <% if user_signed_in? %>
-        <div class="container-fluid mt-4 d-flex justify-content-end">
-            <%= button_to destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "text-danger d-flex align-items-center" do %>
-                <i class="bi bi-box-arrow-left me-1"></i>
-                <span class="fw-bold"><%= current_user.role %> </span>
-            <% end %>
-        </div>
+    <div class="small d-flex gap-4">
+        <% if user_signed_in? %>
+            <div class="container-fluid mt-4 d-flex justify-content-end">
+                <%= button_to destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "text-danger d-flex align-items-center" do %>
+                    <i class="bi bi-box-arrow-left me-1"></i>
+                    <span class="fw-bold"><%= current_user.role %> </span>
+                <% end %>
+            </div>
 
-    <% elsif current_admin_user %>
-        <div class="container-fluid mt-4 d-flex justify-content-end">
-            <%= button_to destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "text-danger d-flex align-items-center" do %>
-                <i class="bi bi-box-arrow-left me-1"></i>
-                <span class="fw-bold"><%= current_admin_user.role %> </span>
-            <% end %>
-        </div>
-    <% else %>
+        <% elsif current_admin_user %>
+            <div class="container-fluid mt-4 d-flex justify-content-end">
+                <%= button_to destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "text-danger d-flex align-items-center" do %>
+                    <i class="bi bi-box-arrow-left me-1"></i>
+                    <span class="fw-bold"><%= current_admin_user.role %> </span>
+                <% end %>
+            </div>
+        <% else %>
 
-        <%= link_to new_user_session_path, class: "text-warning text-decoration-none" do %>
-            <i class="bi bi-person-lock"></i>
-            <span class="fw-bold">Connexion</span>
+            <%= link_to new_user_session_path, class: "text-warning text-decoration-none" do %>
+                <i class="bi bi-person-lock"></i>
+                <span class="fw-bold">Connexion</span>
+            <% end %>
+
+            <%= link_to new_user_registration_path, class: "text-primary text-decoration-none" do %>
+                <i class="bi bi-person-add"></i>
+                <span class="fw-bold">Nouveau</span>
+            <% end %>
+
+
         <% end %>
 
-        <%= link_to new_user_registration_path, class: "text-primary text-decoration-none" do %>
-            <i class="bi bi-person-add"></i>
-            <span class="fw-bold">Nouveau</span>
-        <% end %>
-
-
-    <% end %>
-
-    <%#= link_to "admin", admin_home_admin_path, class: "btn btn-sm btn-dark" %>
-    <%= link_to "admin", admin_root_url(subdomain: "admin"), class: "fw-bold text-dark text-decoration-none" %>
+        <%= link_to "admin", admin_root_url(subdomain: "admin"), class: "fw-bold text-dark text-decoration-none" %>
+    </div>
 </div>
