--- a/app/views/public/pages/_main_carousel.html.erb
+++ b/app/views/public/pages/_main_carousel.html.erb
@@ -1,10 +1,12 @@
 <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
 
-        <% @carousel_images.each_with_index do |image, index| %>
-            <div class="carousel-item <%= 'active' if index == 0 %>">
-                <%= image_tag(image, class: "w-100", style: "object-fit: cover; height: 400px;", alt: "image accueil #{index}") %>
-            </div>
+        <% if @carousel_images.any? %>
+            <% @carousel_images.each_with_index do |image, index| %>
+                <div class="carousel-item <%= 'active' if index == 0 %>">
+                    <%= image_tag(image, class: "w-100", style: "object-fit: cover; height: 400px;", alt: "image accueil #{index}") %>
+                </div>
+            <% end %>
         <% end %>
 
     </div>
