base panier et stripe checkout

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -23,6 +23,7 @@
 
   <body class="pb-4">
     <%= render "public/shared/navbar" %>
+    <%= render "public/shared/cart" %>
 
     <div class="m-0 p-0">
       <%= yield %>
