--- a/app/views/public/pages/produits.turbo_stream.erb
+++ b/app/views/public/pages/produits.turbo_stream.erb
@@ -9,8 +9,12 @@
     <%= turbo_stream.replace :pagination do %>
         <%= turbo_frame_tag :pagination, loading: :lazy,
             src: params[:id].present? ? 
-                produits_path(format: :turbo_stream, id: params[:id], slug: params[:slug], taille: params[:taille], page: @pagy.next, q: params[:q]&.to_unsafe_h) : 
-                produits_index_path(format: :turbo_stream, taille: params[:taille], page: @pagy.next, q: params[:q]&.to_unsafe_h) %>
+                produits_path(format: :turbo_stream, 
+                    id: params[:id], slug: params[:slug], taille: params[:taille], couleur: params[:couleur], 
+                    page: @pagy.next, q: params[:q]&.to_unsafe_h) : 
+                produits_index_path(format: :turbo_stream, 
+                    taille: params[:taille], couleur: params[:couleur], 
+                    page: @pagy.next, q: params[:q]&.to_unsafe_h) %>
     <% end %>
 
 <% end %>
