--- a/app/views/public/pages/_filtres_couleur.html.erb
+++ b/app/views/public/pages/_filtres_couleur.html.erb
@@ -1,6 +1,6 @@
 <div id="filtres-couleur">
 
-    <div class="text-uppercase fw-bold mt-2">
+    <div class="text-uppercase mt-2">
         Couleurs
     </div>
 
