--- a/app/views/public/pages/_filtres_taille.html.erb
+++ b/app/views/public/pages/_filtres_taille.html.erb
@@ -1,6 +1,6 @@
 <div id="filtres-taille">
 
-    <div class="text-uppercase fw-bold mt-2">
+    <div class="text-uppercase mt-2">
         Tailles
     </div>
 
